Call: Fix floating toolbar

Empathy needed to mark the toolbar actor as reactive otherwise it won't
be reactive to events (doh)...

And empathy needed to stop calling gdk_disable_multi_device().. Empathy
used to do this because it has to be called before GTK+ is initialized
and clutter-gtk only called after GTK+ was initialized by other function
in empathy. Unfortunately since clutter-gtk 1.1.2 instead of ensuring
event actually work with clutter-gtk calling this function will actually
break event handle (great fun!)..

Oh and also bump the clutter-gtk requirement to 1.1.2 to ensure we get
the right behaviour for events..

https://bugzilla.gnome.org/show_bug.cgi?id=670874